--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪</title>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -35,32 +37,130 @@
       'Berne, Eric', 'Berra, Yogi', 'Berry, Wendell', 'Bevan, Aneurin', 'Ben-Gurion, David', 'Bevel, Ken', 'Biden, Joseph', 'Bennington, Chester', 'Bierce, Ambrose',
       'Billings, Josh', 'Birrell, Augustine', 'Blair, Tony', 'Beecher, Henry', 'Biondo, Frank'
     ];
-    
+
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
 
+    const fifteen = inventors.filter(function (inventor) {
+
+      if (inventor.year >= 1500 && inventor.year < 1600) {
+        return true;
+      }
+    });
+
+    // rewrite into arrow function
+    const arrowFifteen = inventors.filter(inventor =>
+
+      (inventor.year >= 1500 && inventor.year < 1600));
+
+    console.table(fifteen);
+    console.table(arrowFifteen);
+
+
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const inventorNames = inventors.map(inventor => inventor.first + ' ' + inventor.last);
+    console.table(inventorNames);
+
+    // could also use a template string using back ticks
+    const formattedNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
+    console.table(formattedNames);
+
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
+    // the sort method is a bubble sort - compare two things and return 1 if the first is higher or -1 if the second is higher
+    const ordered = inventors.sort(function (a, b) {
+      if (a.year > b.year) {
+        return 1;
+      } else {
+        return -1;
+      }
+    });
+
+    console.table(ordered);
+
+
+    // but can make this shorter with ternary operator
+    // this reads the same as above but more concise
+    const improvedOrdered = inventors.sort((a, b) => a.year > b.year ? 1 : -1);
+
+
+    console.table(improvedOrdered);
+
+
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
 
+    // we give reduce an accumlator variable and then tell it what item we're iterating on
+    const totalYears = inventors.reduce((total, inventor) => {
+
+      return total + (inventor.passed - inventor.year);
+
+    }, 0);
+
+    console.table(totalYears);
+
     // 5. Sort the inventors by years lived
+
+    const oldest = inventors.sort(function (a, b) {
+      const lifeTimeA = a.passed - a.year;
+      const lifeTimeB = b.passed - b.year;
+
+      return lifeTimeA > lifeTimeB ? -1 : 1;
+    })
+
+    console.table(oldest);
+
 
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+
+    // const category = document.querySelector('.mw-category');
+    // const links = Array.from(category.querySelectorAll('a'));
+
+    // const de = links
+    //   .map(link => link.textContent)
+    //   .filter(streetName => streetName.includes('de'));
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+
+    const alpha = people.sort((lastOne, nextOne) => {
+
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+
+      return aLast > bLast ? 1 : -1;
+
+    });
+
+    console.log(alpha);
+
     // 8. Reduce Exercise
     // Sum up the instances of each of these
-    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
+    const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck'];
+
+    // starting with a blank object
+    const transportation = data.reduce(function (obj, item) {
+
+      // check if item already exists, otherwise add it to the object
+      if (!obj[item]) {
+        obj[item] = 0;
+      }
+
+      obj[item]++;
+
+      return obj;
+
+    }, {});
+
+    console.table(transportation);
 
   </script>
 </body>
+
 </html>
