--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Array Cardio 💪💪</title>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
   <p><em>Psst: have a look at the JavaScript Console</em> 💁</p>
   <script>
@@ -27,9 +29,34 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+
+    const currentYear = 2017;
+
+    const isAdult = people.some((person) => {
+
+      return (currentYear - person.year >= 19) ? true : false;
+
+    })
+
+    console.log({ isAdult });
+
     // Array.prototype.every() // is everyone 19 or older?
 
+    const allAdults = people.every((person) => {
+
+      return (currentYear - person.year >= 19) ? true : false;
+
+    })
+
+    console.log(allAdults);
+
     // Array.prototype.find()
+
+    const comment = comments.find((comment) => (comment.id === 823423));
+
+    console.log(comment);
+
+
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
@@ -37,6 +64,25 @@
     // Find the comment with this ID
     // delete the comment with the ID of 823423
 
+
+    const index = comments.findIndex((comment) => (comment.id === 823423));
+
+    console.log(index);
+
+    // to  delete we can use splice which can remove a number of elements starting at a given index
+    const removeComment = comments.splice(index, 1);
+
+    console.log(comments);
+
+    // splice also returns the elements it removes from the array
+    console.log(comments.splice(index, 1));
+
+
+
+
+
+
   </script>
 </body>
+
 </html>
