--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
 
 
@@ -58,10 +60,41 @@
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
-<script>
+  <script>
 
-</script>
+    window.addEventListener('keydown', playSound);
+
+    function playSound(e) {
+
+      const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`);
+      const key = document.querySelector(`.key[data-key="${e.keyCode}"]`);
+      key.classList.add('playing');
+
+      if (!audio) return;
+
+      audio.currentTime = 0; // rewinds to the start to allow successive tapping
+
+      audio.play();
+    }
+
+    function removeTransition(e) {
+      if (e.propertyName !== 'transform') return;
+
+      this.classList.remove('playing');
+
+
+    }
+
+
+    const keys = document.querySelectorAll('.key');
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+
+
+
+  </script>
 
 
 </body>
+
 </html>
